deploy: cb31a0041b173fdbd087715a9d0d7a1c19499832

--- a/lectures/13_code_quality.html
+++ b/lectures/13_code_quality.html
@@ -1067,6 +1067,21 @@ alt="own drawing based on Glen Lipka’s" />
 href="https://commadot.com/wtf-per-minute/">Glen
 Lipka’s</a></figcaption>
 </figure>
+<h1 id="summary"><a class="header" href="#summary">summary</a></h1>
+<ul>
+<li>code smells indicate issues with the code
+<ul>
+<li>style guide violations as well</li>
+<li>programming paradigm/language dependence</li>
+</ul>
+</li>
+<li>there are some measures to evaluate the quality of the work
+<ul>
+<li>e.g., cyclomatic complexity</li>
+<li>can be automatized or done with review</li>
+</ul>
+</li>
+</ul>
 <h1 id="references"><a class="header" href="#references">references</a></h1>
 <div id="refs" class="references csl-bib-body hanging-indent"
 line-spacing="2">
