--- a/lectures/14_code_review.html
+++ b/lectures/14_code_review.html
@@ -898,7 +898,7 @@ int main (void) {
 <li>applies to every output element of the development process
 <ul>
 <li>V-model</li>
-<li>requirement analysis can be reviewed</li>
+<li>requirement analysis can be reviewed (requirements smells)</li>
 <li>for design: risk storming</li>
 <li>for code review, four formality level
 <ul>
