--- a/print.html
+++ b/print.html
@@ -10237,6 +10237,21 @@ alt="own drawing based on Glen Lipka’s" />
 href="https://commadot.com/wtf-per-minute/">Glen
 Lipka’s</a></figcaption>
 </figure>
+<h1 id="summary-2"><a class="header" href="#summary-2">summary</a></h1>
+<ul>
+<li>code smells indicate issues with the code
+<ul>
+<li>style guide violations as well</li>
+<li>programming paradigm/language dependence</li>
+</ul>
+</li>
+<li>there are some measures to evaluate the quality of the work
+<ul>
+<li>e.g., cyclomatic complexity</li>
+<li>can be automatized or done with review</li>
+</ul>
+</li>
+</ul>
 <h1 id="references-11"><a class="header" href="#references-11">references</a></h1>
 <div id="refs" class="references csl-bib-body hanging-indent"
 line-spacing="2">
@@ -11062,7 +11077,7 @@ int main (void) {
 <p><img src="lectures/figures/india_cleaner.png" alt="" /></p>
 </div>
 </div>
-<h1 id="summary-2"><a class="header" href="#summary-2">summary</a></h1>
+<h1 id="summary-3"><a class="header" href="#summary-3">summary</a></h1>
 <ul>
 <li>(code) review is for improving (code) quality
 <ul>
@@ -11072,7 +11087,7 @@ int main (void) {
 <li>applies to every output element of the development process
 <ul>
 <li>V-model</li>
-<li>requirement analysis can be reviewed</li>
+<li>requirement analysis can be reviewed (requirements smells)</li>
 <li>for design: risk storming</li>
 <li>for code review, four formality level
 <ul>
