--- a/slides/13_code_quality.html
+++ b/slides/13_code_quality.html
@@ -1176,6 +1176,22 @@ Lipka’s</a></figcaption>
 </figure>
 </section>
 
+<section id="summary" class="title-slide slide level1">
+<h1>summary</h1>
+<ul>
+<li>code smells indicate issues with the code
+<ul>
+<li>style guide violations as well</li>
+<li>programming paradigm/language dependence</li>
+</ul></li>
+<li>there are some measures to evaluate the quality of the work
+<ul>
+<li>e.g., cyclomatic complexity</li>
+<li>can be automatized or done with review</li>
+</ul></li>
+</ul>
+</section>
+
 <section id="references" class="title-slide slide level1">
 <h1>references</h1>
 <div id="refs" class="references csl-bib-body" role="list">
