--- a/slides/14_code_review.html
+++ b/slides/14_code_review.html
@@ -992,7 +992,7 @@ CC BY-SA 2.5</p>
 <li>applies to every output element of the development process
 <ul>
 <li>V-model</li>
-<li>requirement analysis can be reviewed</li>
+<li>requirement analysis can be reviewed (requirements smells)</li>
 <li>for design: risk storming</li>
 <li>for code review, four formality level
 <ul>
