deploy: 867991856f6bc499cdb11ff769445740810ac6bb

--- a/print.html
+++ b/print.html
@@ -10863,7 +10863,7 @@ truth</span></li>
 make the reviewed code better</span></li>
 </ul>
 </li>
-<li>it it kind?</li>
+<li>is it kind?</li>
 </ul>
 <div class="text-smaller">
 <p>source: <a href="https://phauer.com/2018/code-review-guidelines/">Code Review Guidelines for
