--- a/slides/14_code_review.html
+++ b/slides/14_code_review.html
@@ -748,7 +748,7 @@ truth</span></li>
 <li><span class="text-smaller">does the <del>demanded</del> requested
 change make the reviewed code better</span></li>
 </ul></li>
-<li>it it kind?</li>
+<li>is it kind?</li>
 </ul>
 <div class="text-smaller">
 <p>source: <a
