deploy: 9f6ae4ff339d334018c0595529ac1abb544866b6

--- a/lectures/13_code_quality.html
+++ b/lectures/13_code_quality.html
@@ -605,7 +605,10 @@ if ((err = SSLHashSHA1.final(&amp;hashCtx, &amp;hashOut)) != 0)
 <div>
 <p>more about Apple’s “goto fail” fiasco (2014): (Wheeler, 2014), (Migues,
 2014)</p>
-<p>false blame on <code>goto</code>, could be prevented by review and testing</p>
+<p>false blame on <code>goto</code> (based on Dijkstra’s essay: <a href="https://www.dcs.gla.ac.uk/~pat/cpM/choco4/nqueens/Goto-Harmful-Dijkstra.pdf">Go To Statement
+Considered
+Harmful</a>),
+could be prevented by review and testing</p>
 </div>
 </div>
 <h1 id="how-to-measure-code-quality"><a class="header" href="#how-to-measure-code-quality">how to measure code quality?</a></h1>
