--- a/slides/summary_week10.html
+++ b/slides/summary_week10.html
@@ -307,7 +307,7 @@ class="title-slide slide level1">
 <div class="column mt-5" style="width:55%;">
 <ul>
 <li>write test <em>before</em> writing the tested code</li>
-<li>without the called unit the test fill fail
+<li>without the called unit the test will fail
 <ul>
 <li>the called function does not exist</li>
 </ul></li>
