deploy: ce0036ff664d448ddc9708e43715cd535c8b7305

--- a/lectures/16_automatization.html
+++ b/lectures/16_automatization.html
@@ -1261,6 +1261,12 @@ title="semantic versioning">semver</span></a>: “If your
 software is being used in production, it should probably already be
 1.0.0.”</p>
 </div>
+<h2 id=""><a class="header" href="#"></a></h2>
+<figure>
+<img src="figures/hugo_0_147_3.png" alt="Hugo 0.147.3" />
+<figcaption aria-hidden="true">Hugo <a
+href="https://github.com/gohugoio/hugo/releases/tag/v0.147.3">0.147.3</a></figcaption>
+</figure>
 <h2 id="fibonacci-releases"><a class="header" href="#fibonacci-releases">Fibonacci releases</a></h2>
 <table>
 <caption>KDE / Plasma 6.1 series <a
