--- a/slides/16_automatization.html
+++ b/slides/16_automatization.html
@@ -1306,6 +1306,14 @@ title="semantic versioning">semver</span></a>: “If your software is
 being used in production, it should probably already be 1.0.0.”</p>
 </div>
 </section>
+<section id="section" class="slide level2">
+<h2></h2>
+<figure>
+<img data-src="figures/hugo_0_147_3.png" alt="Hugo 0.147.3" />
+<figcaption aria-hidden="true">Hugo <a
+href="https://github.com/gohugoio/hugo/releases/tag/v0.147.3">0.147.3</a></figcaption>
+</figure>
+</section>
 <section id="fibonacci-releases" class="slide level2">
 <h2>Fibonacci releases</h2>
 <table>
