deploy: cb8ce75ae5206e5cca4f565ed9597def79362a63

--- a/lectures/16_automatization.html
+++ b/lectures/16_automatization.html
@@ -1481,10 +1481,34 @@ schedule</figcaption>
 </div>
 <!--- "eat the frog" 
     - frog is a metaphor for the biggest and most important task-->
-<!--
-## pomodoro technique
-&#10;::: {}
-:::-->
+<h2 id="pomodoro-technique"><a class="header" href="#pomodoro-technique">pomodoro technique</a></h2>
+<ul>
+<li>time management method, developed by Francesco Cirillo in the late
+1980s</li>
+<li>“Pomodoro” means tomato in Italian</li>
+<li>you <em>must</em> take a 5-minute break after every 25 minutes of work (aka
+session)</li>
+<li>after 4 “Pomodoro” work sessions, take 15-30 minute longer break
+<ul>
+<li>100 minutes of work time with 15 minutes of short breaks</li>
+</ul>
+</li>
+</ul>
+<div class="columns">
+<div class="column" width="75%">
+<div class="wide-quote mt-2">
+<blockquote>
+<p>It’s not about squeezing as many tasks as possible into a day. It’s
+about taking the time to do things right and giving yourself the space
+to breathe.</p>
+<p>– Francesco Cirillo</p>
+</blockquote>
+</div>
+</div>
+<div class="column" width="25%">
+<p><img src="figures/publicdomainvectors/tomato-red.svg" alt="" /></p>
+</div>
+</div>
 <h1 id="references"><a class="header" href="#references">references</a></h1>
 <div id="refs"
 class="text-smaller references csl-bib-body hanging-indent"
