--- a/slides/16_automatization.html
+++ b/slides/16_automatization.html
@@ -1527,11 +1527,34 @@ schedule</figcaption>
 </div>
 <!--- "eat the frog" 
     - frog is a metaphor for the biggest and most important task-->
-<!--
-## pomodoro technique
-
-::: {}
-:::-->
+</section>
+<section id="pomodoro-technique" class="slide level2">
+<h2>pomodoro technique</h2>
+<ul>
+<li>time management method, developed by Francesco Cirillo in the late
+1980s</li>
+<li>“Pomodoro” means tomato in Italian</li>
+<li>you <em>must</em> take a 5-minute break after every 25 minutes of
+work (aka session)</li>
+<li>after 4 “Pomodoro” work sessions, take 15-30 minute longer break
+<ul>
+<li>100 minutes of work time with 15 minutes of short breaks</li>
+</ul></li>
+</ul>
+<div class="columns">
+<div class="column" style="width:75%;">
+<div class="wide-quote mt-2">
+<blockquote>
+<p>It’s not about squeezing as many tasks as possible into a day. It’s
+about taking the time to do things right and giving yourself the space
+to breathe.</p>
+<p>– Francesco Cirillo</p>
+</blockquote>
+</div>
+</div><div class="column" style="width:25%;">
+<p><img data-src="figures/publicdomainvectors/tomato-red.svg" /></p>
+</div>
+</div>
 </section></section>
 <section id="references" class="title-slide slide level1">
 <h1>references</h1>
