deploy: c9b9e3deed297f95276a8e249db94e9ca695919e

--- a/lectures/16_automatization.html
+++ b/lectures/16_automatization.html
@@ -1509,6 +1509,42 @@ to breathe.</p>
 <p><img src="figures/publicdomainvectors/tomato-red.svg" alt="" /></p>
 </div>
 </div>
+<div class="text-smaller">
+<p>read more: <a href="https://www.lifehack.org/articles/productivity/the-pomodoro-technique-is-it-right-for-you.html">The Pomodoro Technique: What It Is &amp; How It Boosts
+Productivity</a>
+by Leon Ho (Ho, 2025)</p>
+</div>
+<h1 id="summary"><a class="header" href="#summary">summary</a></h1>
+<div class="columns">
+<div class="column" width="60%">
+<div class="text-align-left">
+<p>automatize as many things you can<br />
+to gain immediate feedback</p>
+<p>and decrease interruptions</p>
+</div>
+<div class="mt-2">
+<ul>
+<li>linters, static code analysis
+<ul>
+<li>style guide compliance</li>
+<li>code smell finding</li>
+</ul>
+</li>
+<li>CI/CD
+<ul>
+<li>review, building, testing, deployment</li>
+<li>vulnerability alerts</li>
+</ul>
+</li>
+</ul>
+</div>
+</div>
+<div class="column" width="40%">
+<p><img
+src="figures/publicdomainvectors/robotic-arm-assembles-a-puzzle.svg"
+width="300" /></p>
+</div>
+</div>
 <h1 id="references"><a class="header" href="#references">references</a></h1>
 <div id="refs"
 class="text-smaller references csl-bib-body hanging-indent"
@@ -1540,6 +1576,14 @@ https://martinfowler.com/articles/continuousIntegration.html
                   https://about.gitlab.com/blog/2022/02/11/4-must-know-devops-principles
                     " class="uri">
 https://about.gitlab.com/blog/2022/02/11/4-must-know-devops-principles
+</a>.</p>
+</div>
+<div id="ref-ho2025pomodoro" class="csl-entry">
+<p>Ho, L. (2025). <em>The pomodoro technique: What it is &amp; how it boosts
+productivity</em>. <a href="
+                   https://www.lifehack.org/articles/productivity/the-pomodoro-technique-is-it-right-for-you.html
+                    " class="uri">
+https://www.lifehack.org/articles/productivity/the-pomodoro-technique-is-it-right-for-you.html
 </a>.</p>
 </div>
 <div id="ref-judin2016succesful" class="csl-entry">
