--- a/slides/16_automatization.html
+++ b/slides/16_automatization.html
@@ -1555,7 +1555,51 @@ to breathe.</p>
 <p><img data-src="figures/publicdomainvectors/tomato-red.svg" /></p>
 </div>
 </div>
+<div class="text-smaller">
+<p>read more: <a
+href="https://www.lifehack.org/articles/productivity/the-pomodoro-technique-is-it-right-for-you.html">The
+Pomodoro Technique: What It Is &amp; How It Boosts Productivity</a> by
+Leon Ho <span class="citation"
+data-cites="ho2025pomodoro">[16]</span></p>
+</div>
 </section></section>
+<section id="summary" class="title-slide slide level1">
+<h1>summary</h1>
+<div class="columns">
+<div class="column" style="width:60%;">
+<div class="text-align-left">
+<dl>
+<dt>automatize as many things you can</dt>
+<dd>
+to gain immediate feedback
+</dd>
+<dd>
+and decrease interruptions
+</dd>
+</dl>
+</div>
+<div class="mt-2">
+<ul>
+<li>linters, static code analysis
+<ul>
+<li>style guide compliance</li>
+<li>code smell finding</li>
+</ul></li>
+<li>CI/CD
+<ul>
+<li>review, building, testing, deployment</li>
+<li>vulnerability alerts</li>
+</ul></li>
+</ul>
+</div>
+</div><div class="column" style="width:40%;">
+<p><img
+data-src="figures/publicdomainvectors/robotic-arm-assembles-a-puzzle.svg"
+width="300" /></p>
+</div>
+</div>
+</section>
+
 <section id="references" class="title-slide slide level1">
 <h1>references</h1>
 <div id="refs" class="text-smaller references csl-bib-body" role="list">
@@ -1683,6 +1727,15 @@ ways to avoid it.”</span> <a href="
                     " class="uri">
                    https://pacohq.com/blog/guide/the-high-price-of-context-switching-for-developers/
 </a>, 23-Apr-2021.</div>
+</div>
+<div id="ref-ho2025pomodoro" class="csl-entry" role="listitem">
+<div class="csl-left-margin">[16] </div><div class="csl-right-inline">L.
+Ho, <span>“The pomodoro technique: What it is &amp; how it boosts
+productivity.”</span> <a href="
+                   https://www.lifehack.org/articles/productivity/the-pomodoro-technique-is-it-right-for-you.html
+                    " class="uri">
+                   https://www.lifehack.org/articles/productivity/the-pomodoro-technique-is-it-right-for-you.html
+</a>, 01-Feb-2025.</div>
 </div>
 </div>
 </section>
