deploy: 9ca1a10eadb01ad5efd2ec78e6d376b2e1859fff

--- a/print.html
+++ b/print.html
@@ -396,6 +396,12 @@ by Louise Bruton</li>
 Prototypes</a></li>
 <li><a href="https://balsamiq.com/learn/">Practical training for creating more usable
 products</a> - by balsamiq</li>
+<li><a href="https://www.freecodecamp.org/news/the-clean-code-handbook/">The Clean Code
+Handbook</a> -
+by Shahan Chowdhury</li>
+<li><a href="https://www.learnerd.org/book_summary/technology/clean_code.html">Clean Code
+sumamry</a>
+– watch the video!</li>
 </ul>
 <h2 id="week-9"><a class="header" href="#week-9">week 9</a></h2>
 <ol>
